// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements/FileInputButton Default smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for
           class="text-sm font-medium text-gray-700"
    >
      Upload File
    </label>
    <input class="form-input file:border-0 file:font-semibold w-full file:py-2 file:px-4 p-0 transition-all ltr:file:mr-5 rtl:file:ml-5 file:text-white file:bg-primary/90 file:hover:bg-primary bg-white border-gray-300"
           id
           type="file"
           accept
           capture="false"
    >
  </div>
</div>
`;

exports[`Elements/FileInputButton Disabled smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for
           class="text-sm font-medium text-gray-700"
    >
      Upload File
    </label>
    <input class="form-input file:border-0 file:font-semibold w-full file:py-2 file:px-4 p-0 transition-all ltr:file:mr-5 rtl:file:ml-5 file:text-white bg-gray-100 cursor-not-allowed bg-gray-100 cursor-not-allowed border-gray-300"
           id
           type="file"
           accept
           capture="false"
           disabled
    >
  </div>
</div>
`;

exports[`Elements/FileInputButton WithAcceptedTypes smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for
           class="text-sm font-medium text-gray-700"
    >
      Upload Images
    </label>
    <input class="form-input file:border-0 file:font-semibold w-full file:py-2 file:px-4 p-0 transition-all ltr:file:mr-5 rtl:file:ml-5 file:text-white file:bg-primary/90 file:hover:bg-primary bg-white border-gray-300"
           id
           type="file"
           accept="image/*"
           capture="false"
           multiple
    >
  </div>
</div>
`;

exports[`Elements/FileInputButton WithCapture smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for
           class="text-sm font-medium text-gray-700"
    >
      Take Photo
    </label>
    <input class="form-input file:border-0 file:font-semibold w-full file:py-2 file:px-4 p-0 transition-all ltr:file:mr-5 rtl:file:ml-5 file:text-white file:bg-primary/90 file:hover:bg-primary bg-white border-gray-300"
           id
           type="file"
           accept="image/*"
           capture="environment"
    >
  </div>
</div>
`;

exports[`Elements/FileInputButton WithError smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for
           class="text-sm font-medium text-gray-700"
    >
      Upload Document
    </label>
    <input class="form-input file:border-0 file:font-semibold w-full file:py-2 file:px-4 p-0 transition-all ltr:file:mr-5 rtl:file:ml-5 file:text-white file:bg-primary/90 file:hover:bg-primary bg-white border-red-500"
           id
           type="file"
           accept
           capture="false"
    >
    <span class="text-sm text-red-500 mt-1">
      Please select a valid file
    </span>
  </div>
</div>
`;
